--- a/docs/views/essay/2024-11-26-1-CTF-3866-WriteUp.md
+++ b/docs/views/essay/2024-11-26-1-CTF-3866-WriteUp.md
@@ -42,6 +42,8 @@ publish: true
 
 ### 考点2：Linux常用命令
 
+### 预期解：
+
 进入页面后，发现只有一个VIm的图标，结合题目描述，可以大致想到是Vim缓存文件泄露
 
 <img src="/img/essay/image-20241126190916569.png" alt="image-20241126190916569" style="zoom:50%;" />
