记录本体项目代码修改部分

--- a/docs/views/essay/2024-11-29-1-CTF-3872-WtriteUp.md
+++ b/docs/views/essay/2024-11-29-1-CTF-3872-WtriteUp.md
@@ -92,7 +92,9 @@ response = requests.get('http://node4.anna.nssctf.cn:28088/flag', cookies=cookie
 print(response.text)
 ```
 
-伪造的方式多种多样，[flask-session-cookie-manager](https://github.com/noraj/flask-session-cookie-manager)
+伪造的方式多种多样，比如使用[flask-session-cookie-manager](https://github.com/noraj/flask-session-cookie-manager)
+
+具体使用方法如下
 
 ```
 python3 flask-session-cookie-manager3.py decode -c "session值" (-s "key值")
